<resources>
    <string name="app_name">My Second App</string>
    <string name="title">Registration Form</string>
    <string name="desc">Welcome to Adventure Learning Club!</string>
    <string name="fName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="studentID">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="reg">Register</string>
    <string name="wlc">Welcome to C346</string>
    <string name="wlcDesc">2019 RP</string>
    <string name="unityTitle">Great HomeSearch</string>
    <string name="unityTitleF">Great HomeSearch Form</string>
    <string name="hseType">House Type</string>
    <string name="payment">Payment Type</string>
    <string name="instmt">Installment</string>
    <string name="full">Full</string>
    <string name="addr">Address</string>
    <string name="oSkill">Other Skills</string>
    <string name="marital">Marital Status</string>
    <string name="recUpdate">Receive Updates</string>
    <string name="letter">Letter</string>
    <string name="emailAlert">Email Alerts</string>
    <string name="phoneCall">Phone Call</string>
    <string name="addReq">Additional Request</string>
    <string name="hseForm">House Selection</string>
    <string name="personal">Personal Particulars</string>
</resources>
