<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="13sp"/>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="370dp"
        android:layout_height="1dp"
        android:background="@color/colorGrey"
        android:layout_marginHorizontal="20dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fName"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:hint="@string/firstName"
            android:background="@drawable/edit_text_outline"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/lastName"
            android:background="@drawable/edit_text_outline"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="15dp"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="50dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/studentID"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/edit_text_outline"
            android:hint="@string/studentID"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:background="@drawable/edit_text_outline"
            android:hint="@string/school"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@drawable/edit_text_outline"
            android:hint="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15dp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:background="@drawable/edit_text_outline"
            android:hint="@string/phone"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:text="@string/reg"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/register_btn_bg"
        />

</LinearLayout>