<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unityTitleF"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorGrey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="@string/hseForm"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hseType"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instmt" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:text="@string/full" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorGrey"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:text="@string/personal"
                        android:textAlignment="center"
                        android:textStyle="bold"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fName"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_outline"
                            android:hint="@string/firstName" />

                        <EditText
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:background="@drawable/edit_text_outline"
                            android:hint="@string/lastName" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="50dp"
                            android:text="@string/female" />

                    </RadioGroup>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addr"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_outline"
                        android:hint="@string/addr" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_outline"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oSkill"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_outline"
                        android:hint="@string/oSkill" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marital"
                        android:textSize="20sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <Spinner
                        android:id="@+id/spinnerMarital"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recUpdate"
                        android:textSize="20sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/letter"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/emailAlert"/>

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phoneCall"/>
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/addReq"
                        android:textSize="20sp"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="5sp" />

                    <EditText
                        android:layout_width="250dp"
                        android:layout_height="150dp"
                        android:background="@drawable/edit_text_outline"
                        android:hint="@string/addReq"
                        android:gravity="top"/>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:background="@drawable/register_btn_bg"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
</LinearLayout>